# DBA_FullBackup_Reader

./: .gitignore  CMakeLists.txt  README.md  gui.py  gui_modern.py  vcpkg.json
backup_format_test/: .env.example  BACKUP_FORMAT_RE.md  FINDINGS.md  README.md  TDE_FINDINGS.md  run_sql.ps1
backup_format_test/analysis/: compare_baks.py  scan_blocks.py
backup_format_test/sql/: 01_create_db.sql  02_backup_uncompressed.sql  03_backup_compressed.sql  04_backup_twice.sql  05_backup_after_change.sql  06_create_large_db.sql  07_get_allocation_info.sql  08_backup_large.sql  09_test_post_backup_data.sql  10_get_allocation_after_insert.sql  11_backup_large_v2.sql  12_create_tde_database.sql  13_backup_tde_cert.sql  14_backup_tde_database.sql
include/bakread/: backup_header.h  backup_stream.h  bakread_api.h  catalog_reader.h  cli.h  csv_writer.h  decompressor.h  direct_extractor.h  error.h  export_writer.h  indexed_page_store.h  json_writer.h  logging.h  lru_cache.h  page.h  page_index.h  parquet_writer.h  pipeline.h  restore_adapter.h  row_decoder.h  tde_handler.h  types.h
powershell/: README.md  SqlBakReader.psd1  SqlBakReader.psm1
src/: backup_header.cpp  backup_stream.cpp  bakread_api.cpp  catalog_reader.cpp  cli.cpp  csv_writer.cpp  decompressor.cpp  direct_extractor.cpp  indexed_page_store.cpp  json_writer.cpp  logging.cpp  lru_cache.cpp  main.cpp  page_index.cpp  parquet_writer.cpp  pipeline.cpp  restore_adapter.cpp  row_decoder.cpp  tde_handler.cpp
tests/: CMakeLists.txt
